<resources>
    <string name="app_name">Practicum-Android-Diploma</string>

    <string name="search_screen_tab">Поиск вакансий</string>
    <string name="favourites_screen_tab">Избранное</string>
    <string name="team_screen_tab">Команда</string>
    <string name="filter_screen">Настройки фильтрации</string>
    <string name="title_vacancy">Вакансия</string>

    <string name="no_internet">Нет интернета</string>
    <string name="search_hint">Введите запрос</string>
    <string name="no_vacancies_title">Не удалось получить\nсписок вакансий</string>
    <string name="server_error_title">Ошибка сервера</string>
    <string name="vacancies_found">Найдено %d вакансий</string>
    <string name="vacancies_found_zero">Найдено 0 вакансий</string>
    <string name="vacancies_not_found">Таких вакансий нет</string>

    <string name="vacancy_title_placeholder">Название вакансии5555555555555555555555555555555555555555555555, Город</string>
    <string name="company_name_placeholder">Компания</string>
    <string name="salary_placeholder">от 10000 до 100000000</string>

    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_from">от</string>
    <string name="salary_to">до</string>
    <string name="currency_rub">₽</string>
    <string name="currency_usd">$</string>
    <string name="currency_eur">€</string>
    <string name="currency_kzt">₸</string>
    <string name="currency_uah">₴</string>
    <string name="currency_byr">Br</string>
    <string name="currency_azn">₼</string>
    <string name="currency_uzs">сум</string>
    <string name="currency_gel">₾</string>
    <string name="currency_kgs">сом</string>

    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_name_label">ФИО:</string>
    <string name="contact_email_label">Почта:</string>
    <string name="contact_phone_label">Телефон:</string>
    <string name="contact_comment_label">Доп. информация:</string>

    <!-- Заглушки для экрана вакансии -->
    <string name="placeholder_vacancy_title">Здесь должно быть название вакансии</string>
    <string name="placeholder_salary">Здесь должна быть зарплата</string>
    <string name="placeholder_company_name">Здесь должно быть название фирмы</string>
    <string name="placeholder_city">Здесь должен быть город</string>
    <string name="placeholder_experience">Здесь должен быть опыт работы</string>
    <string name="placeholder_employment_type">Здесь должен указываться тип занятости</string>
    <string name="placeholder_description">Здесь должно быть описание вакансии\n
        Обязаности\n
        Разрабатывать новую функциональность приложения\n
        Помогать с интеграцией нашего SDK в другие приложения\n
        Проектировать большие новые модули\n
        Писать UI- и unit-тесты\n
        Следить за работоспособностью сервиса и устранять технический долг
    </string>
    <string name="placeholder_skills">Здесь должны быть ключевые навыки\n
        Знание классических алгоритмов и структуры данных\n
        Программирование для Android больше одного года\n
        Знание WebRTC
    </string>

    <string name="not_specified">Не указано</string>
    <string name="no_contacts">Контакты не указаны</string>

    <string name="share_vacancy">Поделиться вакансией</string>

    <string name="work_place_hint">Место работы</string>
    <string name="industry_hint">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_salary_hint">Введите сумму</string>
    <string name="hide_without_salary">Не показывать без зарплаты</string>

    <string name="industry_selection_title">Выбор отрасли</string>
    <string name="search_industry_hint">Введите отрасль</string>

    <string name="work_place_title">Выбор места работы</string>
    <string name="plaintive_cries_of_kittens">Заглушка\n Нас всего трое и у нас лапки!!!</string>


    <!-- Team -->
    <string name="team_title">Над приложением работали</string>

    <string name="team_role_leader">Посол доброй воли к Бэкенду (Но без дипломатического иммунитета)</string>
    <string name="team_role_domain">Создательница мостов между Данными и Экранчиками</string>
    <string name="team_role_ui">Художник, рисует квадратики и красит кнопочки </string>
    <string name="team_role_reviewers">Смотрители кривого кода</string>
    <string name="team_role_curator">Повелительница спринтов и котиков</string>

    <string name="team_name_leader">Новохатский Дмитрий</string>
    <string name="team_name_domain">Камалян Сюзанна</string>
    <string name="team_name_ui">Кривошеев Евгений</string>
    <string name="team_name_reviewer1">Денисенко Борис</string>
    <string name="team_name_reviewer2">Казаков Илья</string>
    <string name="team_name_curator">Михеева Алина</string>

    <string name="list_empty">Список пуст</string>
    <string name="apply_button">Принять</string>
    <string name="reset_button">Сбросить</string>
    <string name="select_button">Выбрать</string>
    <string name="no_industries_title">Не удалось получить список отраслей</string>

</resources>
