<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_team"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:theme="@style/Theme.PracticumAndroidDiploma">

    <TextView
        android:id="@+id/header"
        style="@style/MediumTextStyle.22.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/header_padding_vertical"
        android:text="@string/team_screen_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/teamMembersContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:paddingHorizontal="@dimen/detail_vacancy_padding_horizontal"
            android:paddingVertical="@dimen/team_padding_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleTeam"
                style="@style/BoldTextStyle.32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_title"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/roleLeaderLabel"
                style="@style/MediumTextStyle.16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vacancy_margin_top_16"
                android:text="@string/team_role_leader"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/roleLeaderName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTeam" />

            <TextView
                android:id="@+id/roleLeaderName"
                style="@style/MediumTextStyle.16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_vacancy_margin_top_4"
                android:text="@string/team_name_leader"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/roleLeaderLabel"
                app:layout_constraintTop_toTopOf="@+id/roleLeaderLabel" />

            <TextView
                android:id="@+id/roleDomainLabel"
                style="@style/MediumTextStyle.16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vacancy_margin_top_8"
                android:text="@string/team_role_domain"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/roleDomainName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roleLeaderLabel" />

            <TextView
                android:id="@+id/roleDomainName"
                style="@style/MediumTextStyle.16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_vacancy_margin_top_4"
                android:text="@string/team_name_domain"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/roleDomainLabel"
                app:layout_constraintTop_toTopOf="@+id/roleDomainLabel" />

            <TextView
                android:id="@+id/roleUILabel"
                style="@style/MediumTextStyle.16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vacancy_margin_top_8"
                android:text="@string/team_role_ui"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/roleUIName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roleDomainLabel" />

            <TextView
                android:id="@+id/roleUIName"
                style="@style/MediumTextStyle.16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_vacancy_margin_top_4"
                android:text="@string/team_name_ui"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/roleUILabel"
                app:layout_constraintTop_toTopOf="@+id/roleUILabel" />

            <TextView
                android:id="@+id/reviewersTitle"
                style="@style/MediumTextStyle.22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vacancy_margin_top_8"
                android:text="@string/team_role_reviewers"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roleUILabel" />

            <TextView
                android:id="@+id/mentorReviewer1Name"
                style="@style/MediumTextStyle.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vacancy_margin_top_8"
                android:text="@string/team_name_reviewer1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviewersTitle" />

            <TextView
                android:id="@+id/reviewer2Name"
                style="@style/MediumTextStyle.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vacancy_margin_top_8"
                android:text="@string/team_name_reviewer2"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mentorReviewer1Name" />

            <TextView
                android:id="@+id/curatorTitle"
                style="@style/MediumTextStyle.22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vacancy_margin_top_8"
                android:text="@string/team_role_curator"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviewer2Name" />

            <TextView
                android:id="@+id/curatorName"
                style="@style/MediumTextStyle.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_vacancy_margin_top_8"
                android:text="@string/team_name_curator"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/curatorTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
