<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:theme="@style/Theme.PracticumAndroidDiploma">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_padding_start"
        android:background="?attr/colorSurface"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/header"
        style="@style/MediumTextStyle.22.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/industry_selection_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/search_field_margin_top"
        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchIndustryContainer"
            android:layout_width="0dp"
            android:layout_height="@dimen/search_field_height"
            android:layout_marginStart="@dimen/search_field_margin_horizontal"
            android:layout_marginEnd="@dimen/search_field_margin_horizontal"
            android:background="@drawable/search_view_background"
            android:paddingStart="@dimen/search_field_padding_horizontal"
            android:paddingEnd="@dimen/search_field_padding_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/searchEditText"
                style="@style/SearchEditText"
                android:hint="@string/search_industry_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/clearButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/clearButton"
                style="@style/SearchFieldIcon"
                android:src="@drawable/ic_search_clean_24"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/searchButton"
                style="@style/SearchFieldIcon"
                android:src="@drawable/ic_search_24"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Список отраслей -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/recycler_view_margin_top_industry"
            android:visibility="visible"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchIndustryContainer"
            tools:itemCount="7"
            tools:listitem="@layout/item_industry"/>

        <!-- Нет интернета -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/errorNoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/errorNoInternetImage"
                style="@style/ErrorImage"
                android:src="@drawable/ic_no_internet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                style="@style/ErrorTitle"
                android:text="@string/no_internet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorNoInternetImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Ошибка сервера -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/errorServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/errorServerImage"
                style="@style/ErrorImage"
                android:src="@drawable/ic_server_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                style="@style/ErrorTitle"
                android:text="@string/server_error_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorServerImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Не удалось получить список отраслей -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/errorNoIndustries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">


            <ImageView
                android:id="@+id/errorNoIndustriesImage"
                style="@style/ErrorImage"
                android:src="@drawable/ic_industry_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                style="@style/ErrorTitle"
                android:text="@string/no_industries_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorNoIndustriesImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <!-- Кнопка выбора -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/button_padding_horizontal_17"
        android:paddingBottom="@dimen/button_padding_bottom"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/selectButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            style="@style/RegularTextStyle.16"
            android:text="@string/select_button"
            android:textColor="@color/whiteUniversal"
            android:background="@drawable/button_apply_background"
            android:gravity="center"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
